js/js.translator/testData/incremental/invalidationWithPL/moveFunctionBetweenModules/lib1/l1.0.kt
package sample

fun foo(): Int = 0
